<resources>
    <string name="app_name" translatable="false">HopeLife</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="email_hint">email</string>
    <string name="password_hint">password</string>
    <string name="personal_data">Я согласен на обработку персональных даннных</string>
    <string name="no_account">Нет аккаунта ?</string>
    <string name="register">Зарегистрироваться</string>
    <string name="login">Войти</string>
    <string name="have_account">Есть аккаунт ?</string>
    <string name="reg_title">Регистрация</string>
    <string name="reg_step1">Продолжить</string>
    <string name="forget_password">Забыли пароль ?</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="midname">Отчество</string>
    <string name="city">Город</string>
    <string name="age">Возраст</string>
    <string name="weight">Вес</string>
    <string name="phone">Номер телефона</string>
    <string name="contacts">Контакты родственников</string>
    <string name="dis">Хронические заболевания</string>
    <string name="drugs">Принимаемые препараты</string>
    <string name="doc_contacts">Контакты лечащего врача</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="course">Длительность курса</string>
    <string name="drug">Препарат</string>
    <string name="phone2">Телефон</string>

    <string name="description">Это тест необходим для того чтобы блаблабла бла бла блабла бла. По результатам этого теста блабла блаблабла.</string>
    <string name="thanks">Спасибо за прохождение теста. Результаты сохранены</string>
    <string name="recomendation">Рекомендуется проконсультироваться с врачом </string>
    <string name="eyellow">Необходим вызов врача на дом</string>
    <string name="ered">Необходима срочная госпитализация</string>
    <string name="call">Звонок 📞</string>
    <string name="coution">Нужен уход за пациентом</string>
    <string name="presure">Нормальное давление</string>
    <string name="freq">Нормальная частота сердцебиения</string>
    <string name="covid_19">Информация о COVID-19</string>
    <string name="timers">Таймеры</string>
    <string name="diaries">Дневники</string>
    <string name="care">Уход за пациентом</string>
    <string name="covid">COVID-19</string>
    <string name="disinfaction">Дезинфекция помещения</string>
    <string name="products">Дезинфекция продуктов питания</string>
    <string name="street">Правильный выход на улицу</string>
    <string name="date">Дата:</string>
    <string name="temp">Температура</string>
    <string name="pres">Давление</string>
    <string name="diet_type">Тип диеты</string>


    <string name="diet1">&lt;a href=https://supercook.ru/cur-diet/cur-diet-02.html>Описание диеты&lt;/a></string>
    <string name="diet2">&lt;a href=https://supercook.ru/cur-diet/cur-diet-05.html>Описание диеты&lt;/a></string>
    <string name="diet3">&lt;a href=https://supercook.ru/cur-diet/cur-diet-06.html>Описание диеты&lt;/a></string>
    <string name="diet4">&lt;a href=https://supercook.ru/cur-diet/cur-diet-07.html>Описание диеты&lt;/a></string>
    <string name="diet5">&lt;a href=https://supercook.ru/cur-diet/cur-diet-10.html>Описание диеты&lt;/a></string>
    <string name="diet6">&lt;a href=https://supercook.ru/cur-diet/cur-diet-13.html>Описание диеты&lt;/a></string>
    <string name="diet7">&lt;a href=https://supercook.ru/cur-diet/cur-diet-14.html>Описание диеты&lt;/a></string>
    <string name="diet8">&lt;a href=https://supercook.ru/cur-diet/cur-diet-18.html>Описание диеты&lt;/a></string>
    <string name="diet9">&lt;a href=https://supercook.ru/cur-diet/cur-diet-19.html>Описание диеты&lt;/a></string>
    <string name="diet10">&lt;a href=https://supercook.ru/cur-diet/cur-diet-20.html>Описание диеты&lt;/a></string>

</resources>
