<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".COVIDinfoActivity">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center|center_vertical"
            android:text="@string/app_name"
            android:textColor="@color/main"
            android:textSize="32sp" />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/covid"
            android:textSize="40sp"
            android:layout_gravity="center"
            android:textColor="@color/main"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_winning" />

        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/covid_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_blank"
            android:text="@string/disinfaction"
            android:textColor="@color/dark"
            />

        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/timers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_blank"
            android:text="@string/products"
            android:textColor="@color/dark"
            />

        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/diary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_blank"
            android:text="@string/street"
            android:textColor="@color/dark"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>