<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Form3Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/main"
            android:textSize="48sp" />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contacts"
                    android:textColor="@color/main"
                    android:layout_gravity="center_vertical"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/ic_add"/>

            </RelativeLayout>

            <ListView
                android:id="@+id/rel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>


        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doc_contacts"
                android:textColor="@color/main"
                android:layout_gravity="center_vertical"/>


        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dis"
                    android:textColor="@color/main"
                    android:layout_gravity="center_vertical"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/ic_add"/>

            </RelativeLayout>

            <ListView
                android:id="@+id/dis"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>


        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/drugs"
                    android:textColor="@color/main"
                    android:layout_gravity="center_vertical"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/ic_add"/>

            </RelativeLayout>

            <ListView
                android:id="@+id/drugs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>


        </LinearLayout>

        <Button
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button"
            android:text="@string/reg_step1"
            android:textSize="12sp"
            android:textColor="@color/light"
            android:id="@+id/next"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>