<?xml version="1.0" encoding="utf-8"?>
<<<<<<< HEAD
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
=======
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
>>>>>>> layout_fix
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
<<<<<<< HEAD
        android:orientation="vertical"
        android:layout_marginTop="40dp"
=======
>>>>>>> layout_fix
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/ubuntu_medium"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/main"
            android:textSize="64sp" />


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:background="#7AE8E7E7"
<<<<<<< HEAD
            android:fontFamily="@font/ubuntu_medium"
            android:hint="email"
=======
            android:fontFamily="@font/open_sans"
            android:hint="@string/email"
>>>>>>> layout_fix
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="#7AE8E7E7"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:background="@drawable/button"
            android:fontFamily="@font/ubuntu"
            android:text="@string/sign_in"
            android:textColor="@color/light"
<<<<<<< HEAD
            android:text="Войти" />

        <TextView
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Забыли пароль ?"
            android:textColor="@color/main"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Нет аккаунта ?"
                android:padding="10dp"/>
            <TextView
                android:id="@+id/reg"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Зарегистрироваться"
                android:textColor="@color/main"/>
        </LinearLayout>


    </LinearLayout>



</RelativeLayout>
=======
            android:textSize="16sp" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
>>>>>>> layout_fix
